// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[avasta] handle name and message 1`] = `
{
  "json": {
    "code": 400000,
    "message": "custom message"
  },
  "status": 400
}
`;

exports[`[avasta] handle name without message 1`] = `
{
  "json": {
    "code": 400000
  },
  "status": 400
}
`;

exports[`[avasta] handle undefined name 1`] = `
{
  "json": {
    "code": 599999
  },
  "status": 599
}
`;
